# dino

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  HYPRLAND_SETUP.md  INSTALL.md
examples/: config.toml.example  hyprland.conf
scripts/: install.sh  uninstall.sh
src/dino/: __init__.py  __main__.py  auth.py  cli.py  config.py  config_writer.py  i18n.py  notify.py  setup_wizard.py
src/dino/audio/: __init__.py  recorder.py  streaming.py
src/dino/output/: __init__.py  base.py  wl_copy.py  wtype_inject.py
src/dino/stt/: __init__.py  base.py  openai_whisper.py
src/dino/terminal/: __init__.py  detect.py
src/dino/tui/: __init__.py  app.py  single_instance.py  state.py  styles.tcss
src/dino/tui/widgets/: __init__.py  footer_hints.py  history.py  spectrum.py  status.py
tests/: test_smoke.py  test_state_machine.py  test_streaming_recorder.py  test_terminal_detect.py  test_tui_pilot.py
