[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "dino-voice"
version = "0.2.1"
description = "Persistent voice-dictation TUI for Hyprland — Whisper-powered, designed to grow into a voice assistant."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "thsergitox" }]
keywords = ["speech-to-text", "dictation", "whisper", "wayland", "hyprland", "voice", "assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.31",
    "rich>=13.7",
    "questionary>=2.0",
    "textual>=0.60",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=7.4",
]

[project.scripts]
dino = "dino.cli:main"

[project.urls]
Homepage = "https://github.com/thsergitox/dino"
Repository = "https://github.com/thsergitox/dino"
Issues = "https://github.com/thsergitox/dino/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dino"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]
